--- a/14/Eclipse.config
+++ b/14/Eclipse.config
@@ -3,20 +3,6 @@
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
 # visit https://nikgapps.com/misc/2022/02/22/NikGapps-Config.html to read everything about nikgapps
 
-PR_NUMBER=11332
-
-PR_NAME=MurtazaKolachi
-
-mode=install
-
-execute.d=1
-
-use_zip_config=1
-
-override_with_zip_config=0
-
-gms_optimization=0
-
 AndroidVersion=15
 
 Version=36
@@ -64,11 +50,11 @@ Core=1
 >>GoogleCalendarSyncAdapter=1
 >>GmsCore=1
 
-DigitalWellbeing=0
+DigitalWellbeing=1
 GoogleMessages=1
 GoogleDialer=0
 GoogleContacts=1
-CarrierServices=0
+CarrierServices=1
 GoogleClock=1
 
 # Set SetupWizard=0 if you want to skip installing all packages belonging to SetupWizard Package
@@ -80,41 +66,42 @@ SetupWizard=1
 GoogleCalculator=1
 Drive=1
 GoogleMaps=1
-GoogleLocationHistory=0
+GoogleLocationHistory=1
 GooglePhotos=1
-DeviceHealthServices=0
+DeviceHealthServices=1
 GBoard=1
 GoogleCalendar=1
-GoogleKeep=0
+GoogleKeep=1
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=1
 >>PixelLauncher=0
->>DevicePersonalizationServices=0
->>GoogleWallpaper=0
->>QuickAccessWallet=0
+>>DevicePersonalizationServices=1
+>>GoogleWallpaper=1
+>>QuickAccessWallet=1
 >>SettingsServices=1
->>PrivateComputeServices=0
+>>PrivateComputeServices=1
 >>PixelThemes=1
 >>EmojiWallpaper=1
 >>PixelWeather=1
+>>AICore=1
 
 PlayGames=0
-GoogleRecorder=0
+GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
-GoogleFiles=0
->>GoogleFiles=0
->>StorageManager=0
->>DocumentsUIGoogle=0
+GoogleFiles=1
+>>GoogleFiles=1
+>>StorageManager=1
+>>DocumentsUIGoogle=1
 
-MarkupGoogle=0
-GoogleTTS=0
+MarkupGoogle=1
+GoogleTTS=1
 
 # Set GoogleSearch=0 if you want to skip installing all packages belonging to GoogleSearch Package
 GoogleSearch=1
 >>Velvet=1
->>Assistant=0
+>>Assistant=1
 
 GoogleSounds=0
 
@@ -125,30 +112,35 @@ GoogleChrome=1
 >>TrichromeLibrary=1
 
 Gmail=1
-DeviceSetup=0
-AndroidAuto=0
-GoogleFeedback=0
-GooglePartnerSetup=0
-AndroidDevicePolicy=0
+DeviceSetup=1
+AndroidAuto=1
+GoogleFeedback=1
+GooglePartnerSetup=1
+AndroidDevicePolicy=1
 
 # Set CoreGo=0 if you want to skip installing all packages belonging to CoreGo Package
 CoreGo=0
 
 # Setting CoreGo=0 will not skip following packages, set them to 0 if you want to skip them  
-GoogleGo=0
-AssistantGo=0
-MapsGo=0
-NavigationGo=0
-GalleryGo=0
-GmailGo=0
+GoogleGo=1
+AssistantGo=1
+MapsGo=1
+NavigationGo=1
+GalleryGo=1
+GmailGo=1
 
 # Following are the Addon packages NikGapps supports
-PixelSetupWizard=0
+PixelSetupWizard=1
 Meet=0
 GoogleDocs=0
-GoogleSheets=0
-GoogleSlides=0
+GoogleSheets=
+GoogleSlides=
 YouTube=0
 YouTubeMusic=0
 Books=0
 GoogleTalkback=0
+
+# NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
+# YouTube
+# /system/app/YouTube
+
