--- a/15/KILLER_0P.config
+++ b/15/KILLER_0P.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12390
+PR_NAME=Killer2801
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
