--- a/15/ihsan.config
+++ b/15/ihsan.config
@@ -1,5 +1,3 @@
-PR_NUMBER=12328
-PR_NAME=ihsanulrahman
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
@@ -72,7 +70,7 @@ GoogleLocationHistory=0
 GooglePhotos=0
 DeviceHealthServices=0
 GBoard=1
-GoogleCalendar=0\
+GoogleCalendar=0
 GoogleKeep=0
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
