--- a/15/CoreMinimal.config
+++ b/15/CoreMinimal.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12427
+PR_NAME=rezwanahmedratul
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
