--- a/15/cr_rahul15.config
+++ b/15/cr_rahul15.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12462
+PR_NAME=merahul1992
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
