--- a/14/LineageOS_Android14GAPPS.config
+++ b/14/LineageOS_Android14GAPPS.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12478
+PR_NAME=sundarmanere
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
