--- a/15/LinGapps.config
+++ b/15/LinGapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12480
+PR_NAME=davidrr2004
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
