--- a/14/nikgapps.config
+++ b/14/nikgapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12484
+PR_NAME=Quasar-0330
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
