--- a/15/MS-NO-PIXEL.config
+++ b/15/MS-NO-PIXEL.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12504
+PR_NAME=Moustafa-Ahmed-2020
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
