--- a/15/bangkk-config.config
+++ b/15/bangkk-config.config
@@ -5,7 +5,7 @@
 
 AndroidVersion=15
 
-Version=36
+Version=37
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
@@ -140,3 +140,8 @@ YouTubeMusic=0
 Books=0
 GoogleTalkback=0
 GooglePersonalSafety=1
+
+# NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
+# YouTube
+# /system/app/YouTube
+
