--- a/15/xiaouex.config
+++ b/15/xiaouex.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12508
+PR_NAME=xiaouex
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
