--- a/14/nikgapps-a64-myself.config
+++ b/14/nikgapps-a64-myself.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12513
+PR_NAME=kelryry
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
