--- a/archive/10/20241220/AK-A10_20241220.config
+++ b/archive/10/20241220/AK-A10_20241220.config
@@ -1,4 +1,4 @@
-PR_NUMBER=12531
+PR_NUMBER=12535
 PR_NAME=Ahmad-Ali-AK
 # NikGapps configuration file
 
@@ -68,8 +68,8 @@ SetupWizard=0
 
 GoogleCalculator=1
 Drive=1
-GoogleMaps=1
-GooglePhotos=1
+GoogleMaps=0
+GooglePhotos=O
 DeviceHealthServices=1
 GBoard=0
 GoogleCalendar=1
@@ -82,7 +82,7 @@ PixelSpecifics=0
 >>GoogleWallpaper=1
 
 PlayGames=0
-GoogleRecorder=1
+GoogleRecorder=0
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
 GoogleFiles=0
