--- a/15/crDroidAndroid.config
+++ b/15/crDroidAndroid.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12562
+PR_NAME=bhimax3p
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
