--- a/14/RedmiNote7.config
+++ b/14/RedmiNote7.config
@@ -10,7 +10,7 @@ Version=37
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
 # by default it will install it to /sdcard/NikGapps/nikgapps_logs
-LogDirectory=default
+LogDirectory="/system/etc"
 
 # set to /system, /product or /system_ext if you want to force the installation to aforementioned locations
 InstallPartition=default
@@ -25,7 +25,7 @@ WipeDalvikCache=1
 WipeRuntimePermissions=0
 
 # Addon.d config, set it to 0 to skip the automatic backup/restore while flashing the rom
-ExecuteBackupRestore=1
+ExecuteBackupRestore=0
 
 # if you want to force the installer to use the config from gapps zip file, set below to 1
 UseZipConfig=0
@@ -51,17 +51,17 @@ Core=1
 >>GmsCore=1
 
 DigitalWellbeing=1
-GoogleMessages=1
-GoogleDialer=1
-GoogleContacts=1
+GoogleMessages=0
+GoogleDialer=0
+GoogleContacts=0
 CarrierServices=1
 GoogleClock=0
 
 # Set SetupWizard=0 if you want to skip installing all packages belonging to SetupWizard Package
-SetupWizard=0
+SetupWizard=1
 >>SetupWizard=1
->>GoogleRestore=1
->>GoogleOneTimeInitializer=1
+>>GoogleRestore=0
+>>GoogleOneTimeInitializer=0
 
 GoogleCalculator=0
 Drive=1
@@ -75,18 +75,18 @@ GoogleKeep=1
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
 PixelSpecifics=0
->>PixelLauncher=1
->>DevicePersonalizationServices=1
->>GoogleWallpaper=1
->>QuickAccessWallet=1
->>SettingsServices=1
->>PrivateComputeServices=1
->>PixelThemes=1
->>EmojiWallpaper=1
->>PixelWeather=1
+>>PixelLauncher=0
+>>DevicePersonalizationServices=0
+>>GoogleWallpaper=0
+>>QuickAccessWallet=0
+>>SettingsServices=0
+>>PrivateComputeServices=0
+>>PixelThemes=0
+>>EmojiWallpaper=0
+>>PixelWeather=0
 
-PlayGames=1
-GoogleRecorder=1
+PlayGames=0
+GoogleRecorder=0
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
 GoogleFiles=0
@@ -108,10 +108,10 @@ GoogleSounds=1
 GoogleChrome=1
 >>GoogleChrome=1
 >>WebViewGoogle=1
->>TrichromeLibrary=0
+>>TrichromeLibrary=1
 
 Gmail=1
-DeviceSetup=0
+DeviceSetup=1
 AndroidAuto=1
 GoogleFeedback=0
 GooglePartnerSetup=0
@@ -122,11 +122,11 @@ CoreGo=0
 
 # Setting CoreGo=0 will not skip following packages, set them to 0 if you want to skip them  
 GoogleGo=0
-AssistantGo=1
-MapsGo=1
-NavigationGo=1
-GalleryGo=1
-GmailGo=1
+AssistantGo=0
+MapsGo=0
+NavigationGo=0
+GalleryGo=0
+GmailGo=0
 
 # Following are the Addon packages NikGapps supports
 PixelSetupWizard=0
