--- a/13/dexter-gapps-v13.config
+++ b/13/dexter-gapps-v13.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12581
+PR_NAME=jaxonfromkh
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
