--- a/15/bravoa88152533.config
+++ b/15/bravoa88152533.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12587
+PR_NAME=bravoa88152533
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
