--- a/15/forabi.config
+++ b/15/forabi.config
@@ -86,7 +86,7 @@ PixelSpecifics=1
 >>PixelWeather=1
 >>AICore=1
 
-PlayGames=1
+PlayGames=-1
 GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
@@ -111,9 +111,9 @@ GoogleChrome=1
 >>WebViewGoogle=1
 >>TrichromeLibrary=1
 
-Gmail=1
+Gmail=-1
 DeviceSetup=1
-AndroidAuto=1
+AndroidAuto=-1
 GoogleFeedback=-1
 GooglePartnerSetup=1
 AndroidDevicePolicy=1
@@ -131,7 +131,7 @@ GmailGo=-1
 
 # Following are the Addon packages NikGapps supports
 PixelSetupWizard=1
-Meet==1
+Meet=-1
 GoogleDocs=-1
 GoogleSheets=-1
 GoogleSlides=-1
