--- a/14/otan-a14-new.config
+++ b/14/otan-a14-new.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12621
+PR_NAME=sidiq27
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
