--- a/15/lunar-pixel.config
+++ b/15/lunar-pixel.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12626
+PR_NAME=theonenooblol
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
