--- a/14/sri_nikgapps-A14.config
+++ b/14/sri_nikgapps-A14.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12632
+PR_NAME=Sribalaji7
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
