--- a/14/baa.config
+++ b/14/baa.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12641
+PR_NAME=malkovich78
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
