--- a/15/Slim-reaper-gapps.config
+++ b/15/Slim-reaper-gapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12646
+PR_NAME=Slimreaper02
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
