--- a/elite/15/Sinister/SinisterGapps.config
+++ b/elite/15/Sinister/SinisterGapps.config
@@ -7,6 +7,7 @@ PR_NAME=vivekvijayan20
 
 AndroidVersion=15
 
+RELEASE_DATE=2501021308
 Version=37
 
 # set this to the directory you want to copy the logs to.
