--- a/15/hgenius.config
+++ b/15/hgenius.config
@@ -5,7 +5,7 @@
 
 AndroidVersion=15
 
-Version=36
+Version=37
 
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
@@ -113,7 +113,7 @@ GoogleChrome=0
 
 Gmail=0
 DeviceSetup=1
-AndroidAuto=0
+AndroidAuto=1
 GoogleFeedback=0
 GooglePartnerSetup=0
 AndroidDevicePolicy=0
@@ -139,6 +139,7 @@ YouTube=0
 YouTubeMusic=0
 Books=0
 GoogleTalkback=0
+GooglePersonalSafety=0
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
 # YouTube
