--- a/15/jack.config
+++ b/15/jack.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12666
+PR_NAME=ja3aria
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
