--- a/15/Lite_Webview_noLauncher.config
+++ b/15/Lite_Webview_noLauncher.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12673
+PR_NAME=TCP3ACK
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
