--- a/15/justukas1.config
+++ b/15/justukas1.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12675
+PR_NAME=justas2006
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
