--- a/archive/15/20250105/Andredr0id_a15_optimized_20250105.config
+++ b/archive/15/20250105/Andredr0id_a15_optimized_20250105.config
@@ -1,4 +1,4 @@
-PR_NUMBER=12686
+PR_NUMBER=12690
 PR_NAME=Andreydr0id
 # NikGapps configuration file
 
@@ -60,7 +60,7 @@ CarrierServices=1
 GoogleClock=1
 
 # Set SetupWizard=0 if you want to skip installing all packages belonging to SetupWizard Package
-SetupWizard=1
+SetupWizard=0
 >>SetupWizard=1
 >>GoogleRestore=1
 >>GoogleOneTimeInitializer=1
@@ -113,7 +113,7 @@ GoogleChrome=0
 >>WebViewGoogle=0
 >>TrichromeLibrary=0
 
-Gmail=0
+Gmail=1
 DeviceSetup=1
 AndroidAuto=0
 GoogleFeedback=0
@@ -124,15 +124,15 @@ AndroidDevicePolicy=0
 CoreGo=0
 
 # Setting CoreGo=0 will not skip following packages, set them to 0 if you want to skip them  
-GoogleGo=1
+GoogleGo=o
 AssistantGo=0
 MapsGo=0
 NavigationGo=0
 GalleryGo=0
-GmailGo=1
+GmailGo=0
 
 # Following are the Addon packages NikGapps supports
-PixelSetupWizard=0
+PixelSetupWizard=1
 Meet=0
 GoogleDocs=0
 GoogleSheets=0
