--- a/14/pandagapps-07012025-xyz.config
+++ b/14/pandagapps-07012025-xyz.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12701
+PR_NAME=lucifeer007
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
