--- a/12/glosperPixelGapps_A12.config
+++ b/12/glosperPixelGapps_A12.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12705
+PR_NAME=Thypsos
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
