--- a/15/monu15.config
+++ b/15/monu15.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12706
+PR_NAME=Igris-Arise
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
