--- a/11/Levi_Gapps.config
+++ b/11/Levi_Gapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12718
+PR_NAME=Lokiee143
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
