--- a/13/Levi_Gapps_A-13.config
+++ b/13/Levi_Gapps_A-13.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12718
+PR_NAME=Lokiee143
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
