--- a/11/Nothing_Gapps.config
+++ b/11/Nothing_Gapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12722
+PR_NAME=nothing-sus-2
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
