--- a/15/Akram09.config
+++ b/15/Akram09.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12731
+PR_NAME=akram-96
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
