--- a/15/Jho.config
+++ b/15/Jho.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12738
+PR_NAME=jhonatanbgarcia
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
