--- a/15/akramgpp.config
+++ b/15/akramgpp.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12737
+PR_NAME=mfdghkj
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
