--- a/15/crDroidAndroid-vayu.config
+++ b/15/crDroidAndroid-vayu.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12771
+PR_NAME=pocobhima
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
