--- a/15/nikgapps.config
+++ b/15/nikgapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12780
+PR_NAME=victorgc34
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
