--- a/11/TodBonzalez.config
+++ b/11/TodBonzalez.config
@@ -28,7 +28,7 @@ WipeRuntimePermissions=0
 ExecuteBackupRestore=1
 
 # if you want to force the installer to use the config from gapps zip file, set below to 1
-UseZipConfig=0
+UseZipConfig=1
 
 # if you want to overwrite the config located in /sdcard/NikGapps with gapps zip file, set below to 1. Applicable to decrypted storage only
 OverwriteWithZipConfig=0
@@ -64,29 +64,29 @@ SetupWizard=1
 >>GoogleOneTimeInitializer=1
 >>AndroidMigratePrebuilt=1
 
-GoogleCalculator=1
-Drive=1
-GoogleMaps=1
+GoogleCalculator=0
+Drive=0
+GoogleMaps=0
 GoogleLocationHistory=1
-GooglePhotos=1
+GooglePhotos=0
 DeviceHealthServices=1
-GBoard=1
-GoogleCalendar=1
-GoogleKeep=1
+GBoard=0
+GoogleCalendar=0
+GoogleKeep=0
 
 # Set PixelSpecifics=0 if you want to skip installing all packages belonging to PixelSpecifics Package
-PixelSpecifics=1
->>PixelLauncher=1
->>DevicePersonalizationServices=1
->>GoogleWallpaper=1
->>QuickAccessWallet=1
+PixelSpecifics=0
+>>PixelLauncher=0
+>>DevicePersonalizationServices=0
+>>GoogleWallpaper=0
+>>QuickAccessWallet=0
 
-PlayGames=1
-GoogleRecorder=1
+PlayGames=0
+GoogleRecorder=0
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
 GoogleFiles=1
->>GoogleFiles=1
+>>GoogleFiles=0
 >>StorageManager=1
 >>DocumentsUIGoogle=1
 
@@ -114,29 +114,35 @@ GooglePartnerSetup=1
 AndroidDevicePolicy=1
 
 # Set CoreGo=0 if you want to skip installing all packages belonging to CoreGo Package
-CoreGo=1
+CoreGo=0
 
 # Setting CoreGo=0 will not skip following packages, set them to 0 if you want to skip them  
-GoogleGo=1
-AssistantGo=1
-MapsGo=1
-NavigationGo=1
-GalleryGo=1
-GmailGo=1
+GoogleGo=0
+AssistantGo=0
+MapsGo=0
+NavigationGo=0
+GalleryGo=0
+GmailGo=0
 
 # Following are the Addon packages NikGapps supports
 PixelSetupWizard=1
-Meet=1
-GoogleDocs=1
-GoogleSheets=1
-GoogleSlides=1
-YouTube=1
-YouTubeMusic=1
-Books=1
-GoogleTalkback=1
-GoogleFi=1
+Meet=0
+GoogleDocs=0
+GoogleSheets=0
+GoogleSlides=0
+YouTube=0
+YouTubeMusic=0
+Books=0
+GoogleTalkback=0
+GoogleFi=0
 
-# NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
-# YouTube
-# /system/app/YouTube
-
+#-------------------------------------------------------#
+## Debloater Configuration
+#-------------------------------------------------------#
+AudioFX
+Browser
+Camera
+FM Radio
+Gallery
+Messaging
+Music
