--- a/15/psyhovsky-lite.config
+++ b/15/psyhovsky-lite.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12786
+PR_NAME=Psyhovsky
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
