--- a/15/Zeus99.config
+++ b/15/Zeus99.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12819
+PR_NAME=Koftazd
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
