--- a/15/XavierIII.config
+++ b/15/XavierIII.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12823
+PR_NAME=Jesuite
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
