--- a/10/gappsAndroid10.config
+++ b/10/gappsAndroid10.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12829
+PR_NAME=Mascaraaa
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
