--- a/15/eds-los22-nikgapps.config
+++ b/15/eds-los22-nikgapps.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12854
+PR_NAME=edplesa
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
