--- a/13/minari.config
+++ b/13/minari.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12874
+PR_NAME=dmsfzn
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
