--- a/15/smg.config
+++ b/15/smg.config
@@ -10,7 +10,7 @@ Version=37
 # set this to the directory you want to copy the logs to.
 # for e.g. LogDirectory="/system/etc" will install the logs to /system/etc/nikgapps_logs directory
 # by default it will install it to /sdcard/NikGapps/nikgapps_logs
-LogDirectory=default
+LogDirectory=/system/etc
 
 # set to /system, /product or /system_ext if you want to force the installation to aforementioned locations
 InstallPartition=default
@@ -19,7 +19,7 @@ InstallPartition=default
 Mode=install
 
 # set WipeDalvikCache=0 if you don't want the installer to wipe dalvik/cache after installing the gapps
-WipeDalvikCache=1
+WipeDalvikCache=0
 
 # set WipeRuntimePermissions=1 if you want to wipe runtime permissions
 WipeRuntimePermissions=0
@@ -58,7 +58,7 @@ CarrierServices=1
 GoogleClock=1
 
 # Set SetupWizard=0 if you want to skip installing all packages belonging to SetupWizard Package
-SetupWizard=0
+SetupWizard=1
 >>SetupWizard=1
 >>GoogleRestore=1
 >>GoogleOneTimeInitializer=1
@@ -90,8 +90,8 @@ PlayGames=0
 GoogleRecorder=1
 
 # Set GoogleFiles=0 if you want to skip installing all packages belonging to GoogleFiles Package
-GoogleFiles=0
->>GoogleFiles=1
+GoogleFiles=1
+>>GoogleFiles=0
 >>StorageManager=1
 >>DocumentsUIGoogle=1
 
@@ -130,7 +130,7 @@ GalleryGo=0
 GmailGo=0
 
 # Following are the Addon packages NikGapps supports
-PixelSetupWizard=1
+PixelSetupWizard=0
 Meet=0
 GoogleDocs=0
 GoogleSheets=0
@@ -139,7 +139,7 @@ YouTube=1
 YouTubeMusic=1
 Books=0
 GoogleTalkback=0
-GooglePersonalSafety=1
+GooglePersonalSafety=0
 
 # NikGapps debloater starts here, add all the stuff to add to debloater.config below (for elite and user builds only), check examples below
 # YouTube
