--- a/15/ikrom11123.config
+++ b/15/ikrom11123.config
@@ -1,3 +1,5 @@
+PR_NUMBER=12884
+PR_NAME=ikrom777
 # NikGapps configuration file
 
 # If you are not sure about the config, just skip making changes to it or comment it by adding # before it
